Academic year is now a parameter of a JD session

--- a/src/main/resources/templates/admin/jd/index.html
+++ b/src/main/resources/templates/admin/jd/index.html
@@ -45,7 +45,7 @@
 					<div class="card" style="width: 18rem;">
 						<div class="card-body">
 							<h5 class="card-title">JD <td th:text="${#dates.format(JD.date, 'dd-MM-yyyy HH:mm')}"></td> </h5>
-							<h6 class="card-subtitle mb-2 text-muted"><td th:if="${JD.ordinary}">Ordnaria<td th:unless="${JD.ordinary}">Extraordinaria</td></h6>
+							<h6 class="card-subtitle mb-2 text-muted"><td th:if="${JD.ordinary}">Ordinaria<td th:unless="${JD.ordinary}">Extraordinaria</td></h6>
 							<p class="card-text" th:text="${JD.place}"></p>
 							<a th:href="'/admin/jd/' + ${JD.id} + '/files'" class="card-link">Documentación</a>
 							<a href="#" class="card-link">Acta</a>
