--- a/src/main/resources/templates/jd_session.html
+++ b/src/main/resources/templates/jd_session.html
@@ -28,7 +28,7 @@
                     th:text="'JD ' + (${jd.ordinary} ? 'Ordinaria ' : 'Extraordinaria ') + ${#dates.format(jd.date, 'dd-MM-yyyy - HH:mm')}">
                 </h2>
                 <h4 th:text="${jd.place}"></h4>
-                <button type="button" class="btn btn-dat btn-danger btn-lg" data-bs-target="#newJD">
+                <button type="button" class="btn btn-secondary btn-lg" data-bs-target="#newJD">
                     Excusar asistencia
                 </button>
                 <table id="files" class="table table-striped table-hover" style="width:100%; table-layout: fixed;">
