--- a/src/main/resources/templates/admin/jd/assistance.html
+++ b/src/main/resources/templates/admin/jd/assistance.html
@@ -23,7 +23,11 @@
 			</div>
 			<div class="row d-flex justify-content-center align-items-center h-100">
 				<div class="col-12 col-md-10 col-lg-8 col-xl-8">
-					<h3>JD Extraordinaria 06/03/2023</h3> <br>
+					<h2
+						th:text="'JD ' + (${jd.ordinary} ? 'Ordinaria ' : 'Extraordinaria ') + ${#dates.format(jd.date, 'dd-MM-yyyy - HH:mm')}">
+					</h2>
+					<h4 th:text="${jd.place}"></h4><br/>
+
 					<h4>Miembros</h4>
 					<hr>
 					<table id="" class="table table-striped table-hover" style="width:100%">
@@ -31,36 +35,22 @@
 							<tr>
 								<th>Nombre</th>
 								<th>Apellidos</th>
-								<th>¿Asiste?</th>
+								<th>Asistencia</th>
 							</tr>
 						</thead>
 						<tbody>
-							<tr id="">
+							<tr th:each="member: ${members}">
 								<td>
-									<p class="name">Rosa</p>
+									<p class="name" th:text="${member.name}"></p>
 								</td>
 								<td>
-									<p class="surname">González González</p>
-								</td>
-								<td>
-									<button class="btn btn-outline-success">Asiste</button>
-									<button class="btn btn-outline-danger">No Asiste</button>
-								</td>
-							</tr>
-
-							<tr id="">
-								<td>
-									<p class="name">Javier</p>
-								</td>
-								<td>
-									<p class="surname">Vázquez Gómez</p>
+									<p class="surname" th:text="${member.surname}"></p>
 								</td>
 								<td>
 									<button class="btn btn-outline-success">Asiste</button>
 									<button class="btn btn-outline-danger">No Asiste</button>
 								</td>
 							</tr>
-
 						</tbody>
 					</table>
 
@@ -72,36 +62,22 @@
 							<tr>
 								<th>Nombre</th>
 								<th>Apellidos</th>
-								<th>¿Asiste?</th>
+								<th>Asistencia</th>
 							</tr>
 						</thead>
 						<tbody>
-							<tr id="">
+							<tr th:each="guest: ${guests}">
 								<td>
-									<p class="name">Elena</p>
+									<p class="name" th:text="${guest.name}"></p>
 								</td>
 								<td>
-									<p class="surname">Suarez Pérez</p>
-								</td>
-								<td>
-									<button class="btn btn-outline-success">Asiste</button>
-									<button class="btn btn-outline-danger">No Asiste</button>
-								</td>
-							</tr>
-
-							<tr id="">
-								<td>
-									<p class="name">Víctor</p>
-								</td>
-								<td>
-									<p class="surname">Serrano Martín</p>
+									<p class="surname" th:text="${guest.surname}"></p>
 								</td>
 								<td>
 									<button class="btn btn-outline-success">Asiste</button>
 									<button class="btn btn-outline-danger">No Asiste</button>
 								</td>
 							</tr>
-
 						</tbody>
 					</table>
 
