--- a/src/main/resources/templates/admin/jd/assistance.html
+++ b/src/main/resources/templates/admin/jd/assistance.html
@@ -5,6 +5,8 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta th:name="_csrf" th:content="${_csrf.token}" />
+	<meta th:name="_csrf_header" th:content="${_csrf.headerName}" />
 	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
 	<link rel="stylesheet" th:href="@{/css/dataTables.bootstrap5.min.css}" />
 	<link rel="stylesheet" th:href="@{/css/materialdesignicons.min.css}" />
@@ -26,9 +28,11 @@
 					<h2
 						th:text="'JD ' + (${jd.ordinary} ? 'Ordinaria ' : 'Extraordinaria ') + ${#dates.format(jd.date, 'dd-MM-yyyy - HH:mm')}">
 					</h2>
-					<h4 th:text="${jd.place}"></h4><br/>
+					<h4 th:text="${jd.place}"></h4><br />
 
-					<h4>Miembros</h4>
+					<h4 th:text="'Miembros: ' + ${members.size}"></h4>
+					<h5 th:text="'Quórum necesario: ' + ${#numbers.formatInteger(T(java.lang.Math).ceil(members.size/2),1)} + ' en 1ª convocatoria / ' + ${#numbers.formatInteger(T(java.lang.Math).ceil(members.size/3),1)} + ' en 2ª convocatoria.'"></h5>
+					<h5 style="text-align:right">Quórum actual: <span id="quorumCounter">-</span></h5>
 					<hr>
 					<table id="" class="table table-striped table-hover" style="width:100%">
 						<thead>
@@ -39,16 +43,59 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr th:each="member: ${members}">
+							<tr th:each="member: ${members}" th:id="'member_' + ${member.id}">
 								<td>
 									<p class="name" th:text="${member.name}"></p>
 								</td>
 								<td>
 									<p class="surname" th:text="${member.surname}"></p>
 								</td>
-								<td>
-									<button class="btn btn-outline-success">Asiste</button>
-									<button class="btn btn-outline-danger">No Asiste</button>
+								<th:block th:if="${participants.containsKey(member.id)}"
+									th:switch="${participants.get(member.id)}">
+									<td th:case="'1'">
+										<button th:data-status="0"
+											th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+											class="btn btn-success assist">Asiste</button>
+										<button th:data-status="2"
+											th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+											class="btn btn-outline-danger miss" style="display:none">No Asiste</button>
+										<button th:data-status="3"
+											th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+											class="btn btn-outline-secondary excuse" style="display:none">Excusa</button>
+									</td>
+									<td th:case="'2'">
+										<button th:data-status="1"
+											th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+											class="btn btn-outline-success assist" style="display:none">Asiste</button>
+										<button th:data-status="0"
+											th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+											class="btn btn-danger miss">No Asiste</button>
+										<button th:data-status="3"
+											th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+											class="btn btn-outline-secondary excuse" style="display:none">Excusa</button>
+									</td>
+									<td th:case="'3'">
+										<button th:data-status="1"
+											th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ');'"
+											class="btn btn-outline-success assist" style="display:none">Asiste</button>
+										<button th:data-status="2"
+											th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+											class="btn btn-outline-danger miss" style="display:none">No Asiste</button>
+										<button th:data-status="0"
+											th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+											class="btn btn-secondary excuse">Excusa</button>
+									</td>
+								</th:block>
+								<td th:unless="${participants.containsKey(member.id)}">
+									<button th:data-status="1"
+										th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+										class="btn btn-outline-success assist">Asiste</button>
+									<button th:data-status="2"
+										th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+										class="btn btn-outline-danger miss">No Asiste</button>
+									<button th:data-status="3"
+										th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+										class="btn btn-outline-secondary excuse">Excusa</button>
 								</td>
 							</tr>
 						</tbody>
@@ -66,16 +113,59 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr th:each="guest: ${guests}">
+							<tr th:each="member: ${guests}" th:class="'member_' + ${member.id}" >
 								<td>
-									<p class="name" th:text="${guest.name}"></p>
+									<p class="name" th:text="${member.name}"></p>
 								</td>
 								<td>
-									<p class="surname" th:text="${guest.surname}"></p>
+									<p class="surname" th:text="${member.surname}"></p>
 								</td>
-								<td>
-									<button class="btn btn-outline-success">Asiste</button>
-									<button class="btn btn-outline-danger">No Asiste</button>
+								<th:block th:if="${participants.containsKey(member.id)}"
+									th:switch="${participants.get(member.id)}">
+									<td th:case="'1'">
+										<button th:data-status="0"
+											th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+											class="btn btn-success assist">Asiste</button>
+										<button th:data-status="2"
+											th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+											class="btn btn-outline-danger miss" style="display:none">No Asiste</button>
+										<button th:data-status="3"
+											th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+											class="btn btn-outline-secondary excuse" style="display:none">Excusa</button>
+									</td>
+									<td th:case="'2'">
+										<button th:data-status="1"
+											th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+											class="btn btn-outline-success assist" style="display:none">Asiste</button>
+										<button th:data-status="0"
+											th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+											class="btn btn-danger miss">No Asiste</button>
+										<button th:data-status="3"
+											th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+											class="btn btn-outline-secondary excuse" style="display:none">Excusa</button>
+									</td>
+									<td th:case="'3'">
+										<button th:data-status="1"
+											th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ');'"
+											class="btn btn-outline-success assist" style="display:none">Asiste</button>
+										<button th:data-status="2"
+											th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+											class="btn btn-outline-danger miss" style="display:none">No Asiste</button>
+										<button th:data-status="0"
+											th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+											class="btn btn-secondary excuse">Excusa</button>
+									</td>
+								</th:block>
+								<td th:unless="${participants.containsKey(member.id)}">
+									<button th:data-status="1"
+										th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+										class="btn btn-outline-success assist">Asiste</button>
+									<button th:data-status="2"
+										th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+										class="btn btn-outline-danger miss">No Asiste</button>
+									<button th:data-status="3"
+										th:onclick="'javascript:updateAssistance(' + ${jd.id} + ', ' + ${member.id} + ', this);'"
+										class="btn btn-outline-secondary excuse">Excusa</button>
 								</td>
 							</tr>
 						</tbody>
@@ -87,10 +177,10 @@
 	</div>
 
 
-	<script th:src="@{js/jquery-3.6.3.min.js}"></script>
-	<script th:src="@{js/bootstrap.bundle.min.js}"></script>
-	<script th:src="@{js/dataTables.bootstrap5.min.js}"></script>
-	<script th:src="@{/js/admin/adminFunctions.js}"></script>
+    <script th:src="@{/js/jquery-3.6.3.min.js}"></script>
+    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+    <script th:src="@{/js/dataTables.bootstrap5.min.js}"></script>
+    <script th:src="@{/js/admin/assistanceFunctions.js}"></script>
 </body>
 
 </html>
