--- a/src/main/resources/templates/admin/census/positions.html
+++ b/src/main/resources/templates/admin/census/positions.html
@@ -32,30 +32,39 @@
                             <div class="col-sm-3">
                                 <h6 class="mb-0">Cargos</h6>
                             </div>
-                            <div th:each="position : ${form.positions}" class="col-sm-9 text-secondary" th:text="${position.name}"></div>
+                            <div th:each="position : ${form.positions}" class="col-sm-9 text-secondary" th:text="${position.name}">
+                                <button th:onclick="'javascript:deletePosition(' + ${position.id} + ');'"
+                                class="btn btn-danger mainMode">Eliminar</button>
+                            </div>
                         </div>
 
                         <div class="row">
                             <div class="col-sm-3">
                                 <h6 class="mb-0">Departamentos</h6>
                             </div>
-                            <div th:each="department : ${form.departments}" class="col-sm-9 text-secondary" th:text="${department.acronym}"></div>
+                            <div th:each="department : ${form.departments}" class="col-sm-9 text-secondary" th:text="${department.acronym}">
+                                <button th:onclick="'javascript:deleteDepartment(' + ${department.id} + ');'"
+                                class="btn btn-danger mainMode">Eliminar</button>
+                            </div>
                         </div>
 
                         <div class="row">
                             <div class="col-sm-3">
                                 <h6 class="mb-0">Comisiones</h6>
                             </div>
-                            <div th:each="commission : ${form.commissions}" class="col-sm-9 text-secondary" th:text="${commission.name}"></div>
+                            <div th:each="commission : ${form.commissions}" class="col-sm-9 text-secondary" th:text="${commission.name}">
+                                <button th:onclick="'javascript:deleteCommission(' + ${commission.id} + ');'"
+                                class="btn btn-danger mainMode">Eliminar</button>
+                            </div>
                         </div>
 
                         <h4 class="text-uppercase text-center mb-5">Añadir cargos</h4>
 
-                        <form action="javascript:;" th:object="${posForm}" onsubmit='uploadNewPos(this)'><!--method="POST"-->
+                        <form action="javascript:;" th:object="${posForm}" onsubmit='uploadPosition(this)'>
 
                             <!--<input type="checkbox" id="posForm" text="Posiciones" value="on"></input>-->
                             <input type="checkbox" id="posForm" name="posForm" value="on">
-                                <label for="posForm">Posiciones</label>
+                                <label for="posForm">Cargos</label>
                             </input>
 
                             <fieldset><!--style="display:none"-->
@@ -63,7 +72,7 @@
                                 <input type="hidden" th:field="*{cenMemberId}">
                                 
                                 <div class="form-outline mb-3">
-                                    <label class="form-label" for="position">Position:</label>
+                                    <label class="form-label" for="position">Cargo:</label>
                                     <select id="positionId" name="position" th:field="*{positionId}"
                                         class="form-control form-control-lg selector" required>
                                         <option th:each="position : ${positionsL}" th:value="${position.id}"
@@ -72,8 +81,21 @@
                                 </div>
 
                                 <div class="form-outline mb-3">
+                                    <label class="form-label" for="degree">Titulación:</label>
+                                    <select th:field="*{degreeCode}" class="form-select" required>
+                                        <option th:each="degree : ${degrees}" th:value="${degree.code}"
+                                            th:text="${degree.acronym}"></option>
+                                    </select>
+                                </div>
+
+                                <div th:if="${diferentiator > 0}" class="form-outline mb-3">
+                                    <label class="form-label" for="diferentiator">Grupo/Curso:</label>
+                                    <input type="text" id="diferentiator" name="diferentiator" class="form-control form-control-lg" th:value="*{diferentiator}"/>
+                                </div>
+
+                                <div class="form-outline mb-3">
                                     <label class="form-label" for="year">Año:</label>
-                                    <input type="number" id="year" name="year" class="form-control form-control-lg" th:value="*{year}" placeholder="Valor númerico del año"/>
+                                    <input type="text" id="year" name="year" class="form-control form-control-lg" th:value="*{year}" placeholder="Valor númerico del año"/>
                                 </div>
 
                                 <div class="d-flex justify-content-center">
@@ -84,7 +106,7 @@
                             </fieldset>
                         </form>
 
-                        <form th:action="@{/admin/census/edit}" th:object="${depForm}" method="POST">
+                        <form action="javascript:;" th:object="${depForm}" onsubmit='uploadDepartment(this)'>
 
                             <!--<input type="checkbox" id="depForm" text="Departamentos" value="on"></input>-->
                             <input type="checkbox" id="depForm" name="depForm" value="on">
@@ -95,11 +117,16 @@
 
                             <div class="form-outline mb-3">
                                 <label class="form-label" for="deparment">Departamento:</label>
-                                <select id="departmentId" name="department" th:field="*{departmetId}"
+                                <select id="departmentId" name="department" th:field="*{departmentId}"
                                     class="form-control form-control-lg" required>
                                     <option th:each="department : ${departmentsL}" th:value="${department.id}"
                                         th:text="${department.acronym}" class="department"></option>
                                 </select>
+                            </div>
+
+                            <div class="form-outline mb-3">
+                                <label class="form-label" for="year">Año:</label>
+                                <input type="text" id="year" name="year" class="form-control form-control-lg" th:value="*{year}" placeholder="Valor númerico del año"/>
                             </div>
 
                             <div class="d-flex justify-content-center">
@@ -108,7 +135,7 @@
                             </div>
                         </form>
 
-                        <form id="comForm" th:action="@{/admin/census/edit}" th:object="${comForm}" method="POST">
+                        <form action="javascript:;" th:object="${comForm}" onsubmit='uploadDepartment(this)'>
 
                             <input type="checkbox" id="comForm" name="comForm" value="on">
                                 <label for="comForm">Comisiones</label>
@@ -123,6 +150,11 @@
                                     <option th:each="commission : ${commissionsL}" th:value="${commission.id}"
                                         th:text="${commission.name}" class="commission"></option>
                                 </select>
+                            </div>
+
+                            <div class="form-outline mb-3">
+                                <label class="form-label" for="year">Año:</label>
+                                <input type="text" id="year" name="year" class="form-control form-control-lg" th:value="*{year}" placeholder="Valor númerico del año"/>
                             </div>
 
                             <div class="d-flex justify-content-center">
