--- a/src/main/resources/templates/admin/census/edit.html
+++ b/src/main/resources/templates/admin/census/edit.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+	<nav th:insert="fragments/navbar.html"></nav>
+
 	<div
 		class="mask d-flex align-items-center h-100 gradient-custom-3 global-margin-top global-margin-bottom justify-content-center">
 		<div class="row d-flex align-items-center justify-content-center h-100">
