--- a/src/main/resources/templates/admin/census/index.html
+++ b/src/main/resources/templates/admin/census/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+    <nav th:insert="fragments/navbar.html"></nav>
+
     <div class="mask d-flex align-items-center h-100 global-margin-bottom"></div>
     <div class="container h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
