--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-
+	<nav th:insert="fragments/navbar.html"></nav>
 	<div
 		class="mask d-flex align-items-center h-100 gradient-custom-3 global-margin-top global-margin-bottom justify-content-center">
 		<div class="row d-flex justify-content-center align-items-center h-100">
