--- a/src/main/resources/templates/admin/jd/assistance.html
+++ b/src/main/resources/templates/admin/jd/assistance.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+	<nav th:insert="fragments/navbar.html"></nav>
 
 	<div
 		class="mask d-flex align-items-center h-100 gradient-custom-3 global-margin-top global-margin-bottom justify-content-center">
