--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+	<nav th:insert="fragments/navbar.html"></nav>
 
 	<div class="mask d-flex align-items-center h-100 global-margin-bottom"></div>
 	<div class="container h-100">
