--- a/src/main/resources/templates/jd_session.html
+++ b/src/main/resources/templates/jd_session.html
@@ -53,7 +53,7 @@
                                 <p th:text="${#dates.format(file.updated, 'dd-MM-yyyy HH:mm')}"></p>
                             </td>
                             <td class="actionButtons">
-                                <a th:href="'/admin/jd/' + ${jd.id} + '/files/' + ${file.id}" target="_blank"
+                                <a th:href="'/jd/' + ${jd.id} + '/files/' + ${file.id}" target="_blank"
                                     class="btn btn-primary mainMode">Abrir</a>
                             </td>
                         </tr>
